// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api handler can read the request params 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{\\"foo\\":\\"bar\\",\\"bar\\":\\"baz\\"},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api handler can read the request params 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.query }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api handler can read the request path 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api handler can read the request path 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.path }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api handler can set response headers 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"foo\\":\\"bar\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api handler can set response headers 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.headers, headers: { \\"x-wingnuts\\": \\"cloudy\\" } }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api response returns Content-Type header from inflight 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api response returns Content-Type header from inflight 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.headers, headers: { \\"Content-Type\\": \\"application/octet-stream; charset=utf-8\\" } }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api response returns default Content-Type header 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api response returns default Content-Type header 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api supports every method type 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Processing \\"POST /hello\\" (body={}, params={}).",
  "Processing \\"PUT /hello\\" (body={}, params={}).",
  "Processing \\"DELETE /hello\\" (body={}, params={}).",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Processing \\"OPTIONS /hello\\" (body={}, params={}).",
  "Processing \\"PATCH /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":{},\\"method\\":\\"POST\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "POST /hello - 200.",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":{},\\"method\\":\\"PUT\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "PUT /hello - 200.",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"DELETE\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "DELETE /hello - 200.",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"HEAD\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"OPTIONS\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "OPTIONS /hello - 200.",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":{},\\"method\\":\\"PATCH\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "PATCH /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api supports every method type 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.method }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "delete": {
                  "operationId": "delete-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "head": {
                  "operationId": "head-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "options": {
                  "operationId": "options-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "patch": {
                  "operationId": "patch-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "put": {
                  "operationId": "put-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
              {
                "method": "POST",
                "path": "/hello",
              },
              {
                "method": "PUT",
                "path": "/hello",
              },
              {
                "method": "DELETE",
                "path": "/hello",
              },
              {
                "method": "HEAD",
                "path": "/hello",
              },
              {
                "method": "OPTIONS",
                "path": "/hello",
              },
              {
                "method": "PATCH",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_post_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_put_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_delete_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_head_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_options_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_patch_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_post_request",
                    "resource": "root/my_api",
                  },
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_put_request",
                    "resource": "root/my_api",
                  },
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_delete_request",
                    "resource": "root/my_api",
                  },
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_head_request",
                    "resource": "root/my_api",
                  },
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_options_request",
                    "resource": "root/my_api",
                  },
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_patch_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with multiple GET routes and one lambda 1`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello/bat": {
                "get": {
                  "operationId": "get-hello/bat",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
              "/hello/foo": {
                "get": {
                  "operationId": "get-hello/foo",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello/foo",
              },
              {
                "method": "GET",
                "path": "/hello/bat",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with multiple methods on same route 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "Processing \\"POST /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"0\\"},\\"body\\":{},\\"method\\":\\"POST\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "POST /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with multiple methods on same route 2`] = `
{
  ".wing/onrequesthandler-7c48a9f0_c8912b27.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"boom\\" }; }
};
})())({

})).handle(event);
};",
  ".wing/onrequesthandler-f6d90a7f_c869cdc5.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"bang\\" }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-7c48a9f0",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-7c48a9f0_c8912b27.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-7c48a9f0",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-7c48a9f0#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-f6d90a7f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-f6d90a7f_c869cdc5.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-f6d90a7f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-f6d90a7f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "POST",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler1": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler1",
          "path": "root/Handler1",
        },
        "Handler2": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler2",
          "path": "root/Handler2",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-7c48a9f0",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_post_request",
                "resource": "root/my_api/OnRequestHandler-f6d90a7f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-7c48a9f0": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-7c48a9f0",
              "path": "root/my_api/ApiEventMapping-7c48a9f0",
            },
            "ApiEventMapping-f6d90a7f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-f6d90a7f",
              "path": "root/my_api/ApiEventMapping-f6d90a7f",
            },
            "OnRequestHandler-7c48a9f0": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-7c48a9f0",
              "path": "root/my_api/OnRequestHandler-7c48a9f0",
            },
            "OnRequestHandler-f6d90a7f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_post_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-f6d90a7f",
              "path": "root/my_api/OnRequestHandler-f6d90a7f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with multiple routes 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello/world\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello/world\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello/world - 200.",
  "Processing \\"GET /hello/wingnuts\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello/wingnuts\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello/wingnuts - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with multiple routes 2`] = `
{
  ".wing/onrequesthandler-7c48a9f0_c8912b27.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"boom\\" }; }
};
})())({

})).handle(event);
};",
  ".wing/onrequesthandler-f6d90a7f_c869cdc5.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"bang\\" }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-7c48a9f0",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-7c48a9f0_c8912b27.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello/wingnuts": {
                "get": {
                  "operationId": "get-hello/wingnuts",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
              "/hello/world": {
                "get": {
                  "operationId": "get-hello/world",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-7c48a9f0",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-7c48a9f0#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello/world",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-f6d90a7f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-f6d90a7f_c869cdc5.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-f6d90a7f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-f6d90a7f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello/wingnuts",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler1": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler1",
          "path": "root/Handler1",
        },
        "Handler2": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler2",
          "path": "root/Handler2",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-7c48a9f0",
              },
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-f6d90a7f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-7c48a9f0": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-7c48a9f0",
              "path": "root/my_api/ApiEventMapping-7c48a9f0",
            },
            "ApiEventMapping-f6d90a7f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-f6d90a7f",
              "path": "root/my_api/ApiEventMapping-f6d90a7f",
            },
            "OnRequestHandler-7c48a9f0": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-7c48a9f0",
              "path": "root/my_api/OnRequestHandler-7c48a9f0",
            },
            "OnRequestHandler-f6d90a7f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-f6d90a7f",
              "path": "root/my_api/OnRequestHandler-f6d90a7f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with one GET route 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /hello\\" (body={}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "GET /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with one GET route 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: \\"boom\\" }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "get": {
                  "operationId": "get-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with one GET route with request params 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"GET /users/{name}\\" (body={}, params={\\"name\\":\\"tsuf\\"}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\"},\\"body\\":{},\\"method\\":\\"GET\\",\\"path\\":\\"/users/tsuf\\",\\"query\\":{},\\"vars\\":{\\"name\\":\\"tsuf\\"}}).",
  "GET /users/{name} - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with one GET route with request params 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.vars ?? {} }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/users/{name}": {
                "get": {
                  "operationId": "get-users/{name}",
                  "parameters": [
                    {
                      "in": "path",
                      "name": "name",
                      "required": true,
                      "schema": {
                        "type": "string",
                      },
                    },
                  ],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/users/{name}",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with one POST route, with body 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"POST /hello\\" (body={\\"message\\":\\"hello world\\"}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"content-type\\":\\"application/json\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"25\\"},\\"body\\":{\\"message\\":\\"hello world\\"},\\"method\\":\\"POST\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "POST /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with one POST route, with body 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "POST",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_post_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_post_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`api with one POST route, with body urlencoded 1`] = `
[
  "wingsdk.cloud.TestRunner created.",
  "wingsdk.cloud.Function created.",
  "Server listening on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api created.",
  "wingsdk.sim.EventMapping created.",
  "Processing \\"POST /hello\\" (body={\\"message\\":\\"hello world\\"}, params={}).",
  "Invoke (payload={\\"headers\\":{\\"host\\":\\"127.0.0.1:<port>\\",\\"connection\\":\\"keep-alive\\",\\"content-type\\":\\"application/x-www-form-urlencoded;charset=UTF-8\\",\\"accept\\":\\"*/*\\",\\"accept-language\\":\\"*\\",\\"sec-fetch-mode\\":\\"cors\\",\\"user-agent\\":\\"undici\\",\\"accept-encoding\\":\\"gzip, deflate\\",\\"content-length\\":\\"19\\"},\\"body\\":{\\"message\\":\\"hello world\\"},\\"method\\":\\"POST\\",\\"path\\":\\"/hello\\",\\"query\\":{},\\"vars\\":{}}).",
  "POST /hello - 200.",
  "wingsdk.sim.EventMapping deleted.",
  "Closing server on http://127.0.0.1:<port>",
  "wingsdk.cloud.Api deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.TestRunner deleted.",
]
`;

exports[`api with one POST route, with body urlencoded 2`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event) {
  return await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body }; }
};
})())({

})).handle(event);
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello": {
                "post": {
                  "operationId": "post-hello",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "POST",
                "path": "/hello",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_post_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_post_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`create an api 1`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {},
          },
        },
        "type": "wingsdk.cloud.Api",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
